--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,27 @@ img {
 .logo__span{
 	color: var(--accent-color);
 }
-
+/* Butto ---------------------------------------------------------------------------------- */
+.button{
+	width: 200px;
+	height: 50px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.8;
+	letter-spacing: .06em;
+	color: var(--white-text-color);
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button:hover,
+.button:focus {
+	background-color: var(--button-hover);
+}
 /* Social --------------------------------------------------------------------------------- */
 .social__list {
-   display: flex;
+	display: flex;
 	align-items: center;
    justify-content: center;
    margin-left: auto;
@@ -125,6 +142,114 @@ img {
 	height: 20px;
 }
 
+/* Form ----------------------------------------------------------------------------------- */
+.form__title{
+	display: block;
+	margin-bottom: 30px;
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+	letter-spacing: 0.03em;
+	color: var(--title-text-color);
+}
+.form__field {
+	display: block;
+	position: relative;
+	margin-bottom: 28px;
+}
+.form__field:nth-child(4){
+	margin-bottom: 20px;
+
+}
+.form__input {
+	width: 100%;
+	margin: 0;	
+	padding: 12px 42px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	box-sizing: border-box;
+	border-radius: 4px;
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__label {
+	position: absolute;
+	pointer-events: none;
+	left: 42px;
+	top: 50%;
+	transform: translateY(-50%);
+	letter-spacing: 0.01em;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__icon {
+	display: inline-block;
+	position: absolute;
+	pointer-events: none;
+	left: 16px;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 18px;
+	height: 18px;
+	fill: var(--title-text-color);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__field:focus-within .form__input {
+	border: 1px solid var(--accent-color);
+}
+.form__field:focus-within .form__label,
+.form__input:not(:placeholder-shown) + .form__label {
+	transform: translate3d(-25px, -40px, 0);
+}
+.form__field:focus-within .form__label{
+	color: var(--accent-color);
+}
+.form__field:focus-within .form__icon {
+	fill: var(--accent-color);
+}
+.form__label--comment {
+	left: 16px;
+	top: 12px;
+	transform: translateY(0%);
+}
+.form__field:focus-within .form__label--comment,
+.form__input:not(:placeholder-shown) + .form__label--comment {
+	transform: translate3d(0, -32px, 0);
+}
+.form__input--comment {
+	resize: none;
+	min-height: 120px;
+	padding: 8px 16px;
+}
+.form__field--terms {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 30px;
+	
+}
+.form__icon--terms {
+	background-color: transparent;
+	fill: transparent;
+	width: 16px;
+	height: 15px;
+	box-sizing: border-box;
+	border: 2px solid var(--title-text-color);
+	border-radius: 2px;
+}
+.form__input--terms:checked + .form__icon--terms {
+	background-color: var(--accent-color);
+	fill: #fff;
+	border: transparent;
+}
+.form__label--terms {
+	margin-left: 7px;
+}
+.form__link--terms {
+	color: var(--accent-color);
+}
+.form__button{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 
 /* HEADER =========================================================================================================================================================================================================== */
@@ -249,23 +374,7 @@ img {
 	color: var(--white-text-color);
 	margin-bottom: 30px;
 }
-.hero-section__button{
-	width: 200px;
-	height: 50px;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 1.8;
-	letter-spacing: .06em;
-	color: var(--white-text-color);
-	background-color: var(--accent-color);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-	border-radius: 4px;
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-section__button:hover,
-.hero-section__button:focus {
-	background-color: var(--button-hover);
-}
+
 
 /* Benefits ------------------------------------------------------------------------------- */
 .benefits {
@@ -626,8 +735,10 @@ img {
 	left: 0;
 	right: 0;
 	bottom: 0;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop--hiden{
+	transform: scale(0.5);
 	opacity: 0;
 	pointer-events: none;
 }
@@ -667,14 +778,7 @@ img {
 .modal__close:hover .modal__close-icon{
 	fill: var(--accent-color);
 }
-.modal__title{
-	display: block;
-	font-size: 20px;
-	line-height: 1.15;
-	text-align: center;
-	letter-spacing: 0.03em;
-	color: var(--title-text-color);
-}
+
 
 /* UTILITS ========================================================================================================================================================================================================== */
 /* .active {
