--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img {
 .logo__span{
 	color: var(--accent-color);
 }
-/* Butto ---------------------------------------------------------------------------------- */
+/* Button --------------------------------------------------------------------------------- */
 .button{
 	width: 200px;
 	height: 50px;
